Fix button overlap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,6 @@ button {
   margin-top:5px;
   margin-bottom:5px;
 }
+.prev-next {
+  pointer-events: none;
+}
